--- a/src/components/Notifications/style.scss
+++ b/src/components/Notifications/style.scss
@@ -11,6 +11,7 @@
         width: 60px;
         height: 60px;
         object-fit: cover;
+        margin-left: 10px;
     }
 
     .notify-content {
