--- a/src/components/UploadPost/style.scss
+++ b/src/components/UploadPost/style.scss
@@ -133,6 +133,7 @@
         .capture {
             position: absolute;
             bottom: 10px;
+            left: 43%;
             font-size: 40px;
             border: none;
             background-color: transparent;
