--- a/src/components/Table/style.scss
+++ b/src/components/Table/style.scss
@@ -1,59 +1,34 @@
-/* styles.css */
-
-/* Style for the table container */
-.table-container {
-    font-family: Arial, sans-serif;
-    margin: 20px;
+.btnDelete {
+    background-color: transparent;
+    border: 0;
+    color: rgb(255, 61, 61);
 }
 
-/* Style for the table */
-.table {
-    width: 100%;
-    border-collapse: collapse;
-    border: 1px solid #ddd;
-    background-color: #fff;
-}
-
-/* Style for table headers */
-.table th {
-    background-color: #f2f2f2;
-    color: #333;
-    font-weight: bold;
-    padding: 10px;
-    border: 1px solid #ddd;
-}
-
-/* Style for table rows */
-.table td {
-    padding: 10px;
-    border: 1px solid #ddd;
-}
-
-/* Style for even rows */
-.table tbody tr:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-/* Style for pagination */
-.pagination-bar {
-    margin-top: 10px;
+.pagination {
     display: flex;
     justify-content: center;
+    padding: 1rem 0;
+    list-style: none;
 }
 
-/* Style for pagination buttons */
-.pagination-bar .page-item {
-    margin: 0 2px;
+.pagination li {
+    margin: 0 5px;
 }
 
-/* Style for active pagination button */
-.pagination-bar .page-item.active .page-link {
-    background-color: #007bff;
-    border-color: #007bff;
-    color: #fff;
+.pagination li a {
+    padding: 0.5rem 1rem;
+    border: 1px solid #dee2e6;
+    color: #007bff;
+    cursor: pointer;
+    text-decoration: none;
 }
 
-/* Style for hover effect on pagination buttons */
-.pagination-bar .page-link:hover {
+.pagination li a:hover {
     background-color: #e9ecef;
+}
+
+.pagination li.active a {
+    background-color: #007bff;
+    color: white;
+    border-color: #007bff;
 }
