--- a/src/pages/users/theme/top/style.scss
+++ b/src/pages/users/theme/top/style.scss
@@ -15,6 +15,29 @@
         display: flex;
         align-items: center;
         gap: 20px;
+        position: relative;
+
+        .option {
+            position: absolute;
+            top: 55px;
+            right: 0;
+            background-color: #fff;
+            padding: 0 20px;
+            padding-top: 15px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+
+            p {
+                line-height: 5px;
+                cursor: pointer;
+                padding: 10px;
+                border-radius: 5px;
+
+                &:hover {
+                    background-color: #b8b8b8;
+                }
+            }
+        }
     }
 
     .top-icon {
