--- a/src/pages/users/detailsuser/style.scss
+++ b/src/pages/users/detailsuser/style.scss
@@ -119,9 +119,19 @@
 
 .relationship-status {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+
+    .btnMessage {
+        padding: 5px 8px;
+        border-radius: 6px;
+        border: none;
+        background-color: rgb(39, 39, 252);
+        color: #fff;
+        box-shadow: 0px 4px 5px -1px rgba(0, 0, 0, 0.45);
+    }
 
     .btn-relationship-add {
         margin: 15px 0;
@@ -153,6 +163,7 @@
             border: none;
             padding: 5px 8px;
             border-radius: 6px;
+            box-shadow: 0px 4px 5px -1px rgba(0, 0, 0, 0.45);
         }
     }
 
@@ -191,6 +202,7 @@
             border: none;
             padding: 5px 8px;
             border-radius: 6px;
+            box-shadow: 0px 4px 5px -1px rgba(0, 0, 0, 0.45);
         }
 
         button:hover {
