--- a/src/components/Messenger/style.scss
+++ b/src/components/Messenger/style.scss
@@ -116,22 +116,24 @@
         width: 100%;
         padding: 10px;
 
-        input {
-            width: 100%;
-            padding: 8px 5px;
-            outline: none;
-            border-radius: 4px;
-            border: none;
-            border-bottom: 1px solid #e3e3e3;
-        }
+        form {
+            input {
+                width: 100%;
+                padding: 8px 30px 10px 8px;
+                outline: none;
+                border-radius: 4px;
+                border: none;
+                border-bottom: 1px solid #e3e3e3;
+            }
 
-        button {
-            position: absolute;
-            bottom: 18px;
-            right: 15px;
-            background-color: transparent;
-            color: rgb(0, 119, 255);
-            border: 0;
+            button {
+                position: absolute;
+                bottom: 18px;
+                right: 15px;
+                background-color: transparent;
+                color: rgb(0, 119, 255);
+                border: 0;
+            }
         }
     }
 }
