--- a/src/pages/users/messenger/style.scss
+++ b/src/pages/users/messenger/style.scss
@@ -12,16 +12,19 @@
     }
 
     .show-friend {
-        position: absolute;
+        position: fixed;
         background-color: #000a38;
         padding: 10px;
         z-index: 10;
         width: 300px;
         height: 230px;
+        top: 180px;
         box-shadow: 0px 4px 5px -1px rgba(0, 0, 0, 0.45);
         border-radius: 5px;
         overflow: hidden;
         overflow-y: auto;
+        left: 50%;
+        transform: translateX(-50%);
     }
 
     .show-friend::-webkit-scrollbar {
